--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var score = 0,
   timerr = 0,
   flag = 0;
 
-var source =["pool2.jpg","golf2.jpg","cricket2.jpg","football2.jpg","snooker2.jpg","images/tennis2.jpg"];
+var source =["pool2.jpg","golf2.jpg","cricket2.jpg","football2.jpg","snooker2.jpg","tennis2.jpg"];
     
 var target = ["pool.jpg","golf.jpg","cricket.jpg","football.jpg","snooker.jpg","tennis.jpg"];
 var wow = new Audio("wow.mp3");
