--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ var score = 0,
   flag = 0;
   correct=0;
 
-var source =["images/pool2.jpg","images/golf2.jpg","images/cricket2.jpg","images/football2.jpg","images/snooker2.jpg","images/tennis2.jpg"];
+var source =["pool2.jpg","golf2.jpg","cricket2.jpg","football2.jpg","snooker2.jpg","tennis2.jpg"];
     
-var target = ["images/pool.jpg","images/golf.jpg","images/cricket.jpg","images/football.jpg","images/snooker.jpg","images/tennis.jpg"];
-var wow = new Audio("images/wow.mp3");
-var loss = new Audio("images/sad.mp3");
+var target = ["pool.jpg","golf.jpg","cricket.jpg","football.jpg","snooker.jpg","tennis.jpg"];
+var wow = new Audio("wow.mp3");
+var loss = new Audio("sad.mp3");
 
 $(document).ready(function () 
 {
